[metadata]
name = dreamscreen
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = Client for Dreamscreen
home-page = https://github.com/lad1337/dreamscreen
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: MIT
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries

